--- a/style.css
+++ b/style.css
@@ -1,12 +1,11 @@
 * {
-  outline: 1px solid red !important;
+  /* outline: 1px solid red !important;  */
+  margin: 0;
+  padding: 0;;
 }
 
-body {
-  display: flex;
-  flex-direction: column;
 
-}
+
 
 a {
   text-decoration: none;
@@ -17,9 +16,6 @@ li {
 }
 
 .sectionOne {
-  background-color: #1F2937;
-}
-.sectionFour {
   background-color: #1F2937;
 }
 
@@ -39,7 +35,11 @@ ul {
   display: flex;
   margin: 0;
   padding: 0;
-  gap: 16px;
+  gap: 20px;
+}
+.links  {
+  font-size: 18px;
+  color: #E5E7EB;
 }
 
 .left .right {
@@ -52,40 +52,65 @@ ul {
 
 .content {
   display: flex;
+  padding: 150px;
+  justify-content: center;
 }
 
 .title {
   font-size: 48px;
-  font-style: extra-bold;
+  font-weight: 800;
   color: #F9FAF8
 }
 
-.sub-text .links {
+.sub-text  {
   font-size: 18px;
   color: #E5E7EB
 }
 
-button {
-  background-color: #3882F6;
+.image {
+  display: flex;
+}
+img {
+  width: 400px;
+  height: 300px;
 }
 
-.footer {
-  background-color: #3882F6;
-}
 
 /* Section two */
+
 .sec2-title {
   font-size: 36px;
-  font-style: extra-bold;
+  font-weight: 800;
   color: #1F2937;
+  text-align: center;
 }
+
+.card-container {
+  padding: 150px;
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  gap: 100px;
+}
+
+.card {
+  height: 100px;
+  width: 100px;
+  display: flex;
+  border-radius: 12px;
+  border: 4px solid skyblue;
+}
+
+
 
 /* Section three */
 .sectionThree {
+  display: flex;
   background-color: #E5E7EB;
 }
 
 .sec3-text {
+  padding: 150px;
   font-size: 36px ;
   font-style: italic;
   font-weight: lighter;
@@ -93,3 +118,56 @@ button {
 }
 
 
+
+/* Section four */
+.sectionFour {
+  display: flex;
+  justify-content: center;
+  padding: 100px;
+}
+.subsection {
+  background-color: #3882F6;
+  display: flex;
+  flex: 1;
+  justify-content: space-around;
+  padding: 20px;
+  border-radius: 10px;
+}
+
+.sec4-title {
+  font-size: 18px;
+  font-weight: bold;
+  color: #E5E7EB
+}
+
+.sec4-subtext {
+  color: #E5E7EB
+}
+
+.sec4-button {
+  display: flex;
+  justify-content: center;
+}
+
+
+
+.footer {
+  background-color: #1F2937;
+  padding: 20px;
+}
+
+.footer-text {
+  text-align: center;
+  color: #E5E7EB
+}
+
+
+button {
+  background-color: #3882F6;
+  font-size: 18px;
+  color: #E5E7EB;
+  border-radius: 12px;
+  border: 2px solid black;
+  padding-left: 15px;
+  padding-right: 15px;
+}
