--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 * {
   /* outline: 1px solid red !important;  */
   margin: 0;
-  padding: 0;;
+  padding: 0;
 }
 
 
@@ -22,8 +22,8 @@ li {
 /* This is section for header of the webpage */
 .header {
   display: flex;
-  padding: 8px;
-  justify-content: space-between;
+  padding: 15px;
+  justify-content: space-evenly;
 }
 
 .header-logo {
@@ -35,7 +35,7 @@ ul {
   display: flex;
   margin: 0;
   padding: 0;
-  gap: 20px;
+  gap: 28px;
 }
 .links  {
   font-size: 18px;
@@ -69,10 +69,20 @@ ul {
 
 .image {
   display: flex;
+  padding: 12px;
 }
 img {
   width: 400px;
   height: 300px;
+}
+
+.content-btn {
+  margin-top: 18px;
+}
+.btn {
+  border: none;
+  border-radius: 4px;
+  padding-left: 12px;
 }
 
 
@@ -83,22 +93,34 @@ img {
   font-weight: 800;
   color: #1F2937;
   text-align: center;
+  padding: 40px;
 }
 
 .card-container {
-  padding: 150px;
-  flex: 1;
   display: flex;
   justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
   gap: 100px;
+  padding: 150px;
+}
+
+.card-wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
 }
 
 .card {
   height: 100px;
   width: 100px;
-  display: flex;
   border-radius: 12px;
   border: 4px solid skyblue;
+}
+
+.card-subtext {
+  padding: 4px;
 }
 
 
@@ -166,8 +188,8 @@ button {
   background-color: #3882F6;
   font-size: 18px;
   color: #E5E7EB;
-  border-radius: 12px;
-  border: 2px solid black;
+  border-radius: 8px;
+  border: 2px  solid black;
   padding-left: 15px;
   padding-right: 15px;
 }
